--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>ResumeRock</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
